# Staffeleinteilung

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Teamliste.csv  adressen.txt  config.json
include/: config.h  distance_calculator.h  evaluation_results.h  file_io.h  html_visualizer.h  league_splitter.h  optimizer.h  team_data.h
src/: distance_calculator.cpp  evaluation.cpp  evaluation_results.cpp  file_io.cpp  html_visualizer.cpp  league_splitter.cpp  main.cpp  optimizer.cpp
